--- a/style.css
+++ b/style.css
@@ -125,7 +125,7 @@ header ul li a
     font-size: 24px;
     margin-bottom: 10px;
 }
-.aboutpic img
+.descriptionpic img
 {
     max-width: 100%;
     border-radius: 2%;
@@ -193,4 +193,27 @@ header ul li a
     filter: alpha(opacity=100);
     visibility: visible;
 }
+.project_content
+{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-bottom: 100px;
+}
+.project_pic img
+{
+    max-width: 100%;
+}
 
+.project_description_right
+{
+    width: 100%;
+    text-align: right;
+    padding-right: 20px;
+}
+.project_description_left
+{
+    width: 100%;
+    text-align: left;
+    padding-left: 20px;
+}
