--- a/style.css
+++ b/style.css
@@ -110,6 +110,10 @@ header ul li a
     font-weight: 600;
     font-size: 30px;
 }
+.textBx
+{
+    padding-right: 20px;
+}
 .content
 {
     display: flex;
