--- a/style.css
+++ b/style.css
@@ -6,12 +6,10 @@
     box-sizing:border-box;
     font-family: 'Poppins', sans-serif;
 }
-section
-{
+section {
     padding: 100px;
 }
-.banner
-{
+.banner {
     position: relative;
     min-height: 100vh;
     background: #fff96a;
@@ -20,20 +18,17 @@ section
     justify-content: space-between;
     align-items: center;
 }
-.banner h2
-{
+.banner h2 {
     font-size: 3em;
     color: black;
     font-weight: 500;
     line-height: 1.5em;
 }
-.banner h2 span
-{
+.banner h2 span {
     font-size: 1.5em;
     font-weight: 700;
 }
-.banner h3
-{
+.banner h3 {
     font-size: 1.5em;
     color: black;
     font-weight: 500;
@@ -47,8 +42,7 @@ section
     align-items: center;
     border-radius: 2%;
 }
-.btn
-{
+.btn {
     position: relative;
     background: #111111;
     display: inline-block;
@@ -61,8 +55,7 @@ section
     letter-spacing: 2px;
     font-weight: 500;
 }
-header
-{
+header {
     position: fixed;
     top: 0;
     left: 0;
@@ -74,14 +67,12 @@ header
     justify-content: space-between;
     align-items: center;
 }
-header.sticky
-{
+header.sticky {
     background: white;
     padding: 40px 100px;
 
 }
-header ul
-{
+header ul {
     position: relative;
     display: flex;
 }
@@ -90,67 +81,55 @@ header ul li
     position: relative;
     list-style: none;
 }
-header ul li a
-{
+header ul li a {
     position: relative;
     display: inline-block;
     margin: 0 15px;
     color: #fff;
     text-decoration: none;
 }
-.heading
-{
+.heading {
     width: 100%;
     text-align: center;
     margin-bottom: 30px;
     margin-top: 30px;
 }
-.heading h2
-{
+.heading h2 {
     font-weight: 600;
     font-size: 30px;
 }
-.textBx
-{
+.textBx {
     padding-right: 20px;
 }
-.content
-{
+.content {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
-.contentBx
-{
+.contentBx {
     padding-right: 30px;
 }
-.contentBx h3
-{
+.contentBx h3 {
     font-size: 24px;
     margin-bottom: 10px;
 }
-.descriptionpic img
-{
+.descriptionpic img {
     max-width: 100%;
     border-radius: 2%;
 }
-.w55
-{
+.w55 {
     padding-left: 20px;
 
 }
-.portfolio
-{
+.portfolio {
     background: #fff96a;
 }
-.portfolioRow
-{
+.portfolioRow {
     display: flex;
     flex-wrap: wrap;
     padding: 0 4px;
 }
-.portfolioColumn
-{
+.portfolioColumn {
     flex: 25%;
     max-width: 50%;
     padding: 0 4px;
@@ -170,15 +149,13 @@ header ul li a
     }
 }
 
-.portfolioColumn img
-{
+.portfolioColumn img {
     width: 100%;
     opacity: 1;
     /*filter: alpha(opacity=100);*/
 }
 
-.portfolioColumn .project .project_text
-{
+.portfolioColumn .project .project_text {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -186,38 +163,40 @@ header ul li a
     opacity: 1;
     visibility: hidden;
 }
-.portfolioColumn .project:hover
-{
+.portfolioColumn .project:hover {
     opacity: .5;
     filter: alpha(opacity=100);
 }
-.project:hover .project_text
-{
+.project:hover .project_text {
     opacity: 1;
     filter: alpha(opacity=100);
     visibility: visible;
 }
-.project_content
-{
+.project_content {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding-bottom: 100px;
 }
-.project_pic img
-{
+.project_pic img {
     max-width: 100%;
 }
 
-.project_description_right
-{
+.project_description_right {
     width: 100%;
     text-align: right;
     padding-right: 20px;
 }
-.project_description_left
-{
+.project_description_left {
     width: 100%;
     text-align: left;
     padding-left: 20px;
+}
+.contactSocial {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.contactSocial img{
+    padding: 50px;
 }
