--- a/style.css
+++ b/style.css
@@ -5,68 +5,22 @@
     padding:0;
     box-sizing:border-box;
     font-family: 'Poppins', sans-serif;
-}
-section {
-    padding: 30px 100px 100px 100px;
+    border: 1px dashed black;
 }
 
-.background-spline {
-    position: absolute;
-    background: #fff96a;
-}
-
-.banner {
-    position: relative;
-    min-height: 100vh;
-    background: none;
-    background-size: cover;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-.banner h2 {
+h2 {
     font-size: 2.5em;
+    font-size: 2vw;
     color: black;
     font-weight: 500;
     line-height: 1.5em;
 }
-.banner h2 span {
+h2 span {
     font-size: 1.25em;
+    font-size: 3.5vw;
     font-weight: 500;
-}
-.banner h3 {
-    font-size: 1.5em;
-    color: black;
-    font-weight: 500;
-    max-width: 75vw;
-}
-.banner img
-{
-    display: flex;
-    margin-left: 3%;
-    justify-content: right;
-    align-items: center;
-    border-radius: 2%;
 }
 
-.pic{
-    padding-left: 100px;
-    padding-right: 40px;
-}
-
-.btn {
-    position: relative;
-    background: #111111;
-    display: inline-block;
-    color: #fff;
-    margin-top: 20px;
-    padding: 10px 30px;
-    font-size: 18px;
-    text-transform: uppercase;
-    text-decoration: none;
-    letter-spacing: 2px;
-    font-weight: 500;
-}
 header {
     position: fixed;
     top: 0;
@@ -78,11 +32,6 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-}
-header.sticky {
-    background: white;
-    padding: 40px 100px;
-
 }
 header ul {
     position: relative;
@@ -100,15 +49,76 @@ header ul li a {
     color: #fff;
     text-decoration: none;
 }
+
+section {
+    padding: 30px 100px;
+}
+
+.background-spline {
+    position: absolute;
+    background: #fff96a;
+}
+
+.spacer{
+    height: 400px;
+}
+
+.row-buffer{
+    padding-bottom: 30px;
+}
+
+.banner {
+    position: relative;
+    background: none;
+    background-size: cover;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.banner h3 {
+    font-size: 1.5em;
+    font-size: 1.75vw;
+    color: black;
+    font-weight: 500;
+    max-width: 75vw;
+}
+.banner img
+{
+    display: flex;
+    margin-left: 3%;
+    justify-content: right;
+    align-items: center;
+    padding-left: 100px;
+    padding-right: 40px;
+}
+
+
+.btn {
+    position: relative;
+    background: #111111;
+    display: inline-block;
+    color: #fff;
+    margin-top: 20px;
+    padding: 10px 30px;
+    font-size: 18px;
+    text-transform: uppercase;
+    text-decoration: none;
+    letter-spacing: 2px;
+    font-weight: 500;
+}
+
+.experience {
+    position:relative;
+}
+
+
+
 .heading {
     width: 100%;
-    text-align: center;
+    text-align: left;
     margin-bottom: 30px;
     margin-top: 30px;
-}
-.heading h2 {
-    font-weight: 600;
-    font-size: 30px;
 }
 .textBx {
     padding-right: 20px;
@@ -135,39 +145,6 @@ header ul li a {
 
 }
 
-/* Responsive layout - makes a two column-layout instead of four columns */
-@media (max-width: 800px) {
-    .portfolioColumn {
-        flex: 50%;
-        max-width: 50%;
-    }
-}
-/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
-@media (max-width: 600px) {
-    .PortfolioColumn {
-        flex: 100%;
-        max-width: 100%;
-    }
-}
-
-.portfolioColumn img {
-    width: 100%;
-    opacity: 1;
-    /*filter: alpha(opacity=100);*/
-}
-
-.portfolioColumn .project .project_text {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    opacity: 1;
-    visibility: hidden;
-}
-.portfolioColumn .project:hover {
-    opacity: .5;
-    filter: alpha(opacity=100);
-}
 .project:hover .project_text {
     opacity: 1;
     filter: alpha(opacity=100);
@@ -179,8 +156,8 @@ header ul li a {
     align-items: center;
     padding-bottom: 100px;
 }
-.project_pic img {
-    max-width: 100%;
+.project-pic img {
+    border-radius: 5%;
 }
 
 .project_description_right {
