--- a/style.css
+++ b/style.css
@@ -54,17 +54,35 @@ section {
     padding: 30px 100px;
 }
 
+a:hover {
+    color: darkgrey;
+    text-decoration: none;
+}
+
+.container a {
+    color: black;
+    text-decoration: none;
+}
+.container a:hover {
+    color: dimgray;
+    text-decoration: none;
+}
+
 .background-spline {
     position: absolute;
     background: #fff96a;
 }
 
 .spacer{
-    height: 400px;
+    height: 620px;
 }
 
-.row-buffer{
+.bottom-buffer{
     padding-bottom: 30px;
+}
+
+.top-buffer{
+    padding-top: 30px;
 }
 
 .banner {
@@ -99,7 +117,7 @@ section {
     background: #111111;
     display: inline-block;
     color: #fff;
-    margin-top: 20px;
+    margin-top: 10px;
     padding: 10px 30px;
     font-size: 18px;
     text-transform: uppercase;
@@ -110,15 +128,6 @@ section {
 
 .experience {
     position:relative;
-}
-
-
-
-.heading {
-    width: 100%;
-    text-align: left;
-    margin-bottom: 30px;
-    margin-top: 30px;
 }
 .textBx {
     padding-right: 20px;
@@ -158,6 +167,10 @@ section {
 }
 .project-pic img {
     border-radius: 5%;
+}
+
+.project-pic h3 {
+    padding-top: 20px;
 }
 
 .project_description_right {
