Add line-following robot and adjust contaxt section padding for Chrome

--- a/style.css
+++ b/style.css
@@ -184,7 +184,7 @@ a {
     padding-left: 20px;
 }
 .contactSocial {
-    padding-top: 500px;
+    padding-top: 7rem;
     padding-bottom: 30px;
 }
 
